--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "require": {
     "php": ">=7.1.0",
     "psr/http-message": "^1.0",
+    "psr/http-server-middleware": "^1.0",
     "zendframework/zend-diactoros": "^1.8"
   },
   "require-dev": {
