--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
     "php": ">=7.2.0",
     "psr/http-message": "^1.0",
     "psr/http-server-middleware": "^1.0",
-    "zendframework/zend-diactoros": "^1.8"
+    "tebe/http-factory": "@dev"
   },
   "require-dev": {
+    "zendframework/zend-diactoros": "^1.8",
     "phpunit/phpunit": "^6.4",
     "squizlabs/php_codesniffer": "^3.1"
   },
