--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2.0",
+    "ext-json": "*",
     "psr/http-message": "^1.0",
     "psr/http-server-middleware": "^1.0",
     "tebe/http-factory": "@dev"
