--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
   },
   "scripts": {
     "test": [
-      "phpunit",
-      "phpcs"
+      "@phpunit",
+      "@phpcs"
     ],
     "phpunit": "./vendor/bin/phpunit",
     "phpcs": "./vendor/bin/phpcs"
